updated some files

--- a/public/jobdescription.html
+++ b/public/jobdescription.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,17 +8,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <div id="navbar"> <span>
+    <div id="navbar">
+        <span>
             <p id="logo">HireMe</p>
-        </span> <span> <button id="find-btn">Find a job</button>
-        </span> <span> <button id="employ-btn">Employers</button> </span> </div>
-    <div id="description"> </div>
+        </span>
+        <span>
+            <button id="find-btn">Find a job</button>
+        </span>
+        <span>
+            <button id="employ-btn">Employers</button>
+        </span>
+    </div>
+
+    <div id="description">
+
+    </div>
+
     <div id="container">
         <div id="content">
             <div id="job-header">
@@ -27,67 +34,43 @@
                     <div id="image-holder"></div>
                 </div>
                 <div id="job-heading">
-                    <div>
-                        <h1 id="job-position">Senior Engineering Manager, ML</h1>
+                    <div><h1 id="job-position">Senior Engineering Manager, ML</h1></div>
+                    <div><p id="company-name">Company</p></div>
+                    <div id="tags">
+                        <span class="tag">MANAGEMENT</span>
+                        <span class="tag">AI</span>
+                        <span class="tag">DEVOPS</span>
                     </div>
-                    <div>
-                        <p id="company-name">Company</p>
-                    </div>
-                    <div id="tags"> <span class="tag">MANAGEMENT</span> <span class="tag">AI</span> <span
-                            class="tag">DEVOPS</span> </div>
                 </div>
             </div>
+
             <div id="job-description">
                 <h2>Job description</h2>
-                <p id="description-content">Lorem ipsum dolor sit amet consectetur. Leo cum donec pharetra interdum
-                    sociis. Dignissim diam condimentum eu tincidunt in mi arcu scelerisque fringilla. Amet et enim sed
-                    diam morbi. Orci non mauris lorem nulla ac sed. Fames sodales ut massa id. Suspendisse a
-                    pellentesque ipsum nulla. Sed ipsum purus sed blandit massa. Morbi mauris sodales venenatis arcu
-                    viverra sed integer arcu blandit. Cras est vel scelerisque massa sed. Faucibus amet purus natoque
-                    enim a dictum at nibh mattis. Faucibus in senectus amet in ultrices ac elit. Massa ut blandit sed
-                    feugiat nullam purus risus arcu. Sapien diam est sed risus lacus aliquam. Maecenas praesent donec
-                    eget elementum neque. Lectus blandit auctor at erat in sem. Sed consequat mattis eu neque in
-                    interdum eget viverra velit. Eros fermentum non in dis mi id lacus id molestie. Odio enim habitasse
-                    aenean ut sodales eu feugiat. Elementum sagittis magna posuere ullamcorper mattis amet. Vitae tortor
-                    enim amet ipsum.
-                    Commodo ornare cras sit et neque eu eget rhoncus. Ante eget sem morbi eu id. In a sit nullam enim
-                    sit enim at. Vitae id vitae odio adipiscing. Mi faucibus pellentesque aliquet tempor. Et euismod ac
-                    cursus vel nulla volutpat ultrices sapien viverra. Blandit ligula suscipit pellentesque lorem ante
-                    diam et fermentum metus. Rhoncus augue mauris fermentum tellus sit sem ac at arcu. Fringilla nibh
-                    viverra suscipit dignissim leo praesent at sed. Venenatis augue gravida porttitor lacus. Neque eu
-                    arcu nulla sed et. Sed bibendum purus natoque. </p>
+                <p id="description-content">Lorem ipsum dolor sit amet consectetur. Leo cum donec pharetra interdum sociis. Dignissim diam condimentum eu tincidunt in mi arcu scelerisque fringilla. Amet et enim sed diam morbi. Orci non mauris lorem nulla ac sed. Fames sodales ut massa id.
+                    Suspendisse a pellentesque ipsum nulla. Sed ipsum purus sed blandit massa. Morbi mauris sodales venenatis arcu viverra sed integer arcu blandit. Cras est vel scelerisque massa sed. Faucibus amet purus natoque enim a dictum at nibh mattis. Faucibus in senectus amet in ultrices ac elit. Massa ut blandit sed feugiat nullam purus risus arcu. Sapien diam est sed risus lacus aliquam. Maecenas praesent donec eget elementum neque. Lectus blandit auctor at erat in sem. Sed consequat mattis eu neque in interdum eget viverra velit. Eros fermentum non in dis mi id lacus id molestie. Odio enim habitasse aenean ut sodales eu feugiat. Elementum sagittis magna posuere ullamcorper mattis amet. Vitae tortor enim amet ipsum.
+                    Commodo ornare cras sit et neque eu eget rhoncus. Ante eget sem morbi eu id. In a sit nullam enim sit enim at. Vitae id vitae odio adipiscing. Mi faucibus pellentesque aliquet tempor.
+                    Et euismod ac cursus vel nulla volutpat ultrices sapien viverra. Blandit ligula suscipit pellentesque lorem ante diam et fermentum metus. Rhoncus augue mauris fermentum tellus sit sem ac at arcu. Fringilla nibh viverra suscipit dignissim leo praesent at sed. Venenatis augue gravida porttitor lacus. Neque eu arcu nulla sed et. Sed sed bibendum purus natoque.
+                    </p>
                 <h2>Preferred Qualification</h2>
                 <ul>
-                    <li>Lorem ipsum dolor sit amet consectetur. Leo cum donec pharetra interdum sociis. Dignissim diam
-                        condimentum eu tincidunt in mi arcu scelerisque fringilla. Amet et enim sed diam morbi. Orci non
-                        mauris lorem nulla ac sed. Fames sodales ut massa id.</li>
-                    <li>Suspendisse a pellentesque ipsum nulla. Sed ipsum purus sed blandit massa. Morbi mauris sodales
-                        venenatis arcu viverra sed integer arcu blandit. Cras est vel scelerisque massa sed. Faucibus
-                        amet purus natoque enim a dictum at nibh mattis. </li>
-                    <li>Faucibus in senectus amet in ultrices ac elit. Massa ut blandit sed feugiat nullam purus risus
-                        arcu. Sapien diam est sed risus lacus aliquam. Maecenas praesent donec eget elementum neque.
-                        Lectus blandit auctor at erat in sem. </li>
-                    <li>Sed consequat mattis eu neque in interdum eget viverra velit. Eros fermentum non in dis mi id
-                        lacus id molestie. Odio enim habitasse aenean ut sodales eu feugiat. Elementum sagittis magna
-                        posuere ullamcorper mattis amet. </li>
+                    <li>Lorem ipsum dolor sit amet consectetur. Leo cum donec pharetra interdum sociis. Dignissim diam condimentum eu tincidunt in mi arcu scelerisque fringilla. Amet et enim sed diam morbi. Orci non mauris lorem nulla ac sed. Fames sodales ut massa id.</li>
+                    <li>Suspendisse a pellentesque ipsum nulla. Sed ipsum purus sed blandit massa. Morbi mauris sodales venenatis arcu viverra sed integer arcu blandit. Cras est vel scelerisque massa sed. Faucibus amet purus natoque enim a dictum at nibh mattis. </li>
+                    <li>Faucibus in senectus amet in ultrices ac elit. Massa ut blandit sed feugiat nullam purus risus arcu. Sapien diam est sed risus lacus aliquam. Maecenas praesent donec eget elementum neque. Lectus blandit auctor at erat in sem. </li>
+                    <li>Sed consequat mattis eu neque in interdum eget viverra velit. Eros fermentum non in dis mi id lacus id molestie. Odio enim habitasse aenean ut sodales eu feugiat. Elementum sagittis magna posuere ullamcorper mattis amet. </li>
                 </ul>
                 <h2>Benefits</h2>
                 <ul>
                     <li>Lorem ipsum dolor sit amet consectetur. Leo cum donec pharetra interdum sociis. </li>
-                    <li>Suspendisse a pellentesque ipsum nulla. Sed ipsum purus sed blandit massa. Morbi mauris sodales
-                        venenatis arcu viverra sed integer arcu blandit. Cras est vel scelerisque massa sed. Faucibus
-                        amet purus natoque enim a dictum at nibh mattis. </li>
-                    <li>Faucibus in senectus amet in ultrices ac elit. Massa ut blandit sed feugiat nullam purus risus
-                        arcu. Sapien diam est sed risus lacus aliquam. Maecenas praesent donec eget elementum neque.
-                        Lectus blandit auctor at erat in sem. </li>
-                    <li>Sed consequat mattis eu neque in interdum eget viverra velit. Eros fermentum non in dis mi id
-                        lacus id molestie. Odio enim habitasse aenean ut sodales eu feugiat. Elementum sagittis magna
-                        posuere ullamcorper mattis amet. </li>
+                    <li>Suspendisse a pellentesque ipsum nulla. Sed ipsum purus sed blandit massa. Morbi mauris sodales venenatis arcu viverra sed integer arcu blandit. Cras est vel scelerisque massa sed. Faucibus amet purus natoque enim a dictum at nibh mattis. </li>
+                    <li>Faucibus in senectus amet in ultrices ac elit. Massa ut blandit sed feugiat nullam purus risus arcu. Sapien diam est sed risus lacus aliquam. Maecenas praesent donec eget elementum neque. Lectus blandit auctor at erat in sem. </li>
+                    <li>Sed consequat mattis eu neque in interdum eget viverra velit. Eros fermentum non in dis mi id lacus id molestie. Odio enim habitasse aenean ut sodales eu feugiat. Elementum sagittis magna posuere ullamcorper mattis amet. </li>
                 </ul>
             </div>
         </div>
         <div id="apply">
-            <div id="apply-button"> <button id="apply-btn">Apply now</button> </div>
+            <div id="apply-button">
+                <button id="apply-btn">Apply now</button>
+            </div>
             <div id="info-card">
                 <div id="job-category">
                     <p class="info-title">JOB CATEGORY</p>
@@ -96,6 +79,11 @@
                 <div id="posted">
                     <p class="info-title">POSTED</p>
                     <p class="info-des">1d ago</p>
+                </div>
+                <div id="years-experience">
+                    <p class="info-title">YEARS OF EXPERIENCE</p>
+                    <input type="text" id="years-experience-input" placeholder="Enter years of experience"> 
+                    <p id="eligibility-message" style="color: red;"></p> 
                 </div>
                 <div id="socials">
                     <p class="info-title">SOCIALS</p>
@@ -107,6 +95,24 @@
     <div id="footer">
         <p id="">hireme@gmail.com</p>
     </div>
-</body>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script>
+    $(document).ready(function() {
+        $("#years-experience-input").keyup(function() {
+            var yearsExperience = $("#years-experience-input").val(); 
+            if (yearsExperience.trim() !== "") {
+                if (parseInt(yearsExperience) >= 3) {
+                    $("#eligibility-message").text("You are eligible.");
+                } else {
+                    $("#eligibility-message").text("You are not eligible.");
+                }
+            } else {
+                $("#eligibility-message").text(""); 
+            }
+        });
+    });
+</script>
+</body>
 </html>
