--- a/public/landing.html
+++ b/public/landing.html
@@ -8,21 +8,35 @@
     <link rel="stylesheet" href="landing.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div id="navbar"> <span>
+    <div id="navbar">
+        <span>
             <p id="logo">HireMe</p>
-        </span> <span> <button id="find-btn">Find a job</button> </span> <span> <button
-                id="employ-btn">Employers</button> </span> </div>
+        </span>
+        <span>
+            <button id="find-btn">Find Company</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </span>
+        <span>
+            <button id="employ-btn">Signup</button>
+        </span>
+    </div>
     <div>
         <p id="title1">Discover the best jobs</p>
-        <p id="title2">Browse thousands of job listings to work at startups and leading companies</p> <a id="browse"
-            href="homepage.html">Browse all jobs </a>
+        <p id="title2">Browse thousands of job listings to work at startups and leading companies</p>
+        <a id="browse" href="homepage.html">Browse all jobs</a>
     </div>
+
+    <script>
+      
+        const signupButton = document.getElementById('employ-btn');
+
+        signupButton.addEventListener('click', () => {
+            window.location.href = 'signup.html'; 
+        });
+    </script>
 </body>
 
 </html>
