--- a/public/signup.html
+++ b/public/signup.html
@@ -162,8 +162,7 @@
       <p id="logo">HireMe</p>
     </span>
     <span>
-      <button id="find-btn">Find a job</button>
-      <button id="employ-btn">Employers</button>
+      <button id="find-btn">Find Company</button>
     </span>
   </div>
   <div>
