--- a/public/login.html
+++ b/public/login.html
@@ -16,10 +16,10 @@
             <p id="logo">HireMe</p>
         </span>
         <span>
-            <button id="find-btn">Find a job</button>
+            <button id="find-btn">Find Company</button>
         </span>
         <span>
-            <button id="employ-btn">Employers</button>
+            <button id="employ-btn">Signup</button>
         </span>
     </div>
     <div>
