--- a/public/login.html
+++ b/public/login.html
@@ -16,7 +16,7 @@
             <p id="logo">HireMe</p>
         </span>
         <span>
-            <button id="find-btn">Find Company</button>
+            <button id="find-btn">Find Company</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </span>
         <span>
             <button id="employ-btn">Signup</button>
@@ -35,4 +35,12 @@
           </div>
           <button type="submit" id="continue-btn">Continue</button>
 </body>
+            <script>
+      
+        const signupButton = document.getElementById('employ-btn');
+
+        signupButton.addEventListener('click', () => {
+            window.location.href = 'signup.html'; 
+        });
+    </script>
 </html>
